fixes dark mode styling

--- a/src/app/styling/big_day.module.css
+++ b/src/app/styling/big_day.module.css
@@ -93,6 +93,7 @@
   }
   .mobile_sub_title {
     display: block;
+    color: #ecd5cd;
   }
   .mobile_note,
   .mobile_copy {
